[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_tree_test"
description = "A CLI tool to create empty Python projects"
authors = [{name = "USERNAME", email = "USERNAME@example.com"}]
license = {text = "MIT"}
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "flask",
    "flask_cors",
    "flask-migrate",
    "flask-restful",
    "flask-sqlalchemy",
    "flask-socketio",
    "flask-wtf",
    "plexapi",
    "click",
    "colorlog",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "tox",
    "build",
    "pytest",
    "coverage"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
cmd = "db_tester.main:main"
test1 = "db_tester.test:test1"
test2 = "db_tester.test:test2"
test3 = "db_tester.test:test3"
test4 = "db_tester.test:test4"
test5 = "db_tester.test:test5"
test6 = "db_tester.test:test6"
test7 = "db_tester.test:test7"
test8 = "db_tester.test:test8"

[project.urls]
homepage = "https://example.com"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = true
where = ["src"]
